@@ -3,6 +3,7 @@ world-of-goo=World of Goo
 
 [entity-name]
 goo-ball=Goo ball
+drool-ball=Drool ball
 world-of-goo--pipe-cap=Pipe cap
 
 [item-name]
